# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
#

2004-11-15 14:52:03 GMT	John Goerzen <jgoerzen@complete.org>	patch-58

    Summary:
      Clarified copyright status of Printf code from Ian Lynagh
    Revision:
      missingh--head--0.5--patch-58


    new files:
     3rd-party-licenses/.arch-ids/=id 3rd-party-licenses/LGPL-2.1

    modified files:
     COPYRIGHT ChangeLog TODO debian/copyright
     libsrc/MissingH/Printf.hs libsrc/MissingH/Printf/Printer.hs
     libsrc/MissingH/Printf/Types.hs

    new directories:
     3rd-party-licenses 3rd-party-licenses/.arch-ids


2004-11-15 14:35:32 GMT	John Goerzen <jgoerzen@complete.org>	patch-57

    Summary:
      Eliminated lhs files; added showValue to Types.hs
    Revision:
      missingh--head--0.5--patch-57


    modified files:
     ChangeLog libsrc/MissingH/Printf/Printer.hs
     libsrc/MissingH/Printf/Types.hs

    renamed files:
     libsrc/MissingH/Printf/Printer.lhs
       ==> libsrc/MissingH/Printf/Printer.hs


2004-11-15 05:26:21 GMT	John Goerzen <jgoerzen@complete.org>	patch-56

    Summary:
      updated todo
    Revision:
      missingh--head--0.5--patch-56


    modified files:
     ChangeLog TODO


2004-11-15 05:19:33 GMT	John Goerzen <jgoerzen@complete.org>	patch-55

    Summary:
      Added todo list
    Revision:
      missingh--head--0.5--patch-55


    new files:
     TODO

    modified files:
     ChangeLog


2004-11-15 05:18:12 GMT	John Goerzen <jgoerzen@complete.org>	patch-54

    Summary:
      Added one more generic test
    Revision:
      missingh--head--0.5--patch-54


    modified files:
     ChangeLog testsrc/Printftest.hs


2004-11-15 05:15:56 GMT	John Goerzen <jgoerzen@complete.org>	patch-53

    Summary:
      Generics work
    Revision:
      missingh--head--0.5--patch-53


    modified files:
     ChangeLog libsrc/MissingH/Printf/Types.hs
     testsrc/Printftest.hs

