@@ -1,10 +1,5 @@
 arch-tag: TODO file
 
 Printf:
- document sub-modules
- make tests for all the examples
- show some functions in the examples
- make %H work -- probably just need a showValue function
-                 just make showValue :: Value -> String
-                 should be an easy "case" statement
+ make %H work 
 
