@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
 #
 
+2004-11-15 15:48:48 GMT	John Goerzen <jgoerzen@complete.org>	patch-59
+
+    Summary:
+      Added more examples, docs for printf
+    Revision:
+      missingh--head--0.5--patch-59
+
+
+    modified files:
+     ChangeLog TODO libsrc/MissingH/Printf.hs testsrc/Printftest.hs
+
+
 2004-11-15 14:52:03 GMT	John Goerzen <jgoerzen@complete.org>	patch-58
 
     Summary:
